<resources>
    <string name="app_name">Sistema Domótica</string>
    <string name="creator_name">Juan Ignacio Vergés</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="estado">Estado</string>
    <string name="luces">Luces</string>
    <string name="riego">Riego</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hora_del_dispositivo">Hora del dispositivo: </string>
    <string name="alarma">Alarma</string>
    <string name="configurar_prendido">Configurar Prendido</string>
    <string name="configurar_apagado">Configurar Apagado</string>
    <string name="desactivar_riego">Desactivar riego</string>
    <string name="creditos">Creditos</string>
    <string name="activar">Activar</string>
    <string name="desactivar">Desactivar</string>
    <string name="panico">Pánico</string>
    <string name="nombre">Juani</string>
    <string name="no_regando">Riego finalizado</string>
    <string name="regando">Regando</string>
    <string name="activada">Activada</string>
    <string name="desactivada">Desactivada</string>
    <string name="luces_prendidas">Luces Encendidas</string>
    <string name="luces_apagadas">Luces Apagadas</string>
    <string name="msg_activar_bt">El bluetooth esta desactivado, debe activarlo</string>
    <string name="salir">Salir</string>
    <string name="vincular">Vincular</string>
    <string name="disp_no_vinculado">El dispositivo no esta vinculado</string>
    <string name="mgs_not_connection">No se puede conectar con el dispositivo, compruebe su rango</string>
    <string name="reintentar">Reintentar</string>
    <string name="int_conn_disp">Intentando conectar con el dispositivo...</string>
    <string name="desactivado">Desactivado</string>
    <string name="activado">Activado</string>
    <string name="alarma_panico">Alarma en estado pánico</string>
    <string name="espera_teclado">Esperando que se termine de usar el teclado...</string>
    <string name="_10_30_hs">10:30 Hs.</string>
    <string name="hora_de_encendido">Hora de encendido:</string>
</resources>
