<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_estado"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/estado" />
        <item
            android:id="@+id/nav_luces"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/luces" />
        <item
            android:id="@+id/nav_riego"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/riego" />
        <item
            android:id="@+id/nav_alarma"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/alarma"/>
        <item
            android:id="@+id/nav_creditos"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/creditos"/>
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
</menu>
